# certifi-system-store

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tests.py  tox.ini
.github/: Dockerfile.fedora33  entry.sh  provision.sh
.github/workflows/: containers.yml  freebsd.yml  tox.yml
src/certifi/: __init__.py  __main__.py  _patch.py  core.py
tests/: test_requests.py  test_simple.py
