[metadata]
name = certifi-system-store
provides = certifi
obsoletes = certifi
version = attr: certifi.__version__
author = Christian Heimes
author_email = christian@python.org
# same as original certifi
license=MPL-2.0
license_file = LICENSE
description = Certifi workaround to use system trust store
keywords = certifi, certificates, certs, x509, tls, ssl, requests
platforms = linux, freebsd
url = https://github.com/tiran/certifi-system-store
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD :: FreeBSD
    Development Status :: 3 - Alpha
    Topic :: Security

[options]
package_dir=
    =src
packages=certifi
include_package_data = True
zip_safe = True
setup_requires = setuptools
python_requires = >=3.6

[options.package_data]
certifi = *.pem

[options.extras_require]
tests = pytest
requests = requests
lint = black; flake8; check-manifest
packaging = check-manifest

[options.packages.find]
where=src
