[metadata]
name = certifi-system-store
# provides and obsoletes are currently ignored by pip
provides = certifi
obsoletes = certifi (< 3000.0)
version = attr: certifi.__version__
author = Christian Heimes
author_email = christian@python.org
# same as original certifi
license = MPL-2.0
license_file = LICENSE
description = A certifi hack to use system trust store on Linux/FreeBSD
keywords = certifi, certificates, certs, x509, tls, ssl, requests
platforms = linux, freebsd
url = https://github.com/tiran/certifi-system-store
project_urls =
    Source = https://github.com/tiran/certifi-system-store
    Bug Tracker = https://github.com/tiran/certifi-system-store/issues
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD :: FreeBSD
    Development Status :: 4 - Beta
    Topic :: Security

[options]
package_dir =
    =src
packages = certifi
include_package_data = True
zip_safe = True
setup_requires = setuptools
# hack to prevent installation on unsupported platforms Windows and macOS
install_requires =
    certifi-system-store > 4000; sys_platform == "win32" or sys_platform == "darwin"
python_requires = >=3.6

[options.package_data]
certifi = *.pem

[options.extras_require]
tests = pytest
requests = requests
lint = black; flake8; check-manifest
packaging = check-manifest

[options.packages.find]
where = src
